# dont-rest-yet

./: .gitignore  .gitmodules  LICENSE  README.md  credentials.json.example  package-lock.json
.devcontainer/: compose.yaml
.devcontainer/classroom/: Dockerfile  devcontainer.json
.devcontainer/discord-bot/: Dockerfile  devcontainer.json
.devcontainer/reminder/: Dockerfile  devcontainer.json
.history/: .gitignore_20231123172322  .gitignore_20231123172357
.history/.devcontainer/discord-bot/: devcontainer_20231123172322.json  devcontainer_20231123172342.json  devcontainer_20231123172349.json
DiscordBot/: pyproject.toml
DiscordBot/dry/reminder/: __init__.py
DiscordBot/src/: ResponseSet.py  changenickname.py  classroomcmd.py  config.json  const.py  main.py  nikiname.json  remindcmd.py  test.py  view.py
DiscordBot/src/pb/: classroom_pb2.py  discorbot.proto  discorbot_pb2.py  discorbot_pb2.pyi  discorbot_pb2_grpc.py  reminder_pb2.py
DiscordBot/src/pb/dry/classroom/: __init__.py
DiscordBot/src/pb/dry/reminder/: __init__.py
classroom/: .env.example  README.md  pyproject.toml
classroom/classroom/: OAuth_test.py  README.md  pyproject.toml
classroom/src/: OAuth_test.py  __init__.py  database_operation.py  encrypt.py  generate_KEY.py  prisma_test.py
postgresql/: schema.prisma
postgresql/migrations/20231211101306_test1/: migration.sql
postgresql/migrations/20231211101913_test2/: migration.sql
postgresql/migrations/20231211111008_test2/: migration.sql
postgresql/migrations/20231211112617_/: migration.sql
postgresql/migrations/20231221002929_/: migration.sql
prisma_client/: actions.py  bases.py  builder.py  client.py  models.py  schema.prisma  types.py
proto/: classroom.proto  reminder.proto
reminder/: .env.example  .gitignore  Cargo.toml  build.rs
reminder/src/: api.rs  config.rs  domain.rs  driver.rs  endpoint.rs  init.rs  main.rs  misc.rs  service.rs
reminder/src/domain/: group.rs  task.rs  user.rs
reminder/src/driver/: group_repository.rs  grpc_api.rs  task_repository.rs  user_repository.rs
reminder/src/endpoint/: notification.rs  task.rs  user.rs
reminder/src/misc/: error.rs  id.rs  stream.rs
reminder/src/service/: create_task.rs  delete_task.rs  list_task.rs  notification.rs  send_notification.rs  service.rs  task.rs  update_task.rs  user.rs
reminder/src/service/notification/: cache.rs  send.rs
reminder/src/service/task/: create.rs  delete.rs  get.rs  list.rs  update.rs
reminder/src/service/user/: create.rs
