[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
discord-py = {git = "https://github.com/Rapptz/discord.py"}
python-dotenv = "^1.0.0"
grpcio = "^1.59.3"
grpcio-tools = "^1.59.3"
py-cord = "^2.4.1"
protobuf = "^4.25.1"
types-protobuf = "^4.24.0.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
