[package]
name = "reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
chrono-tz = "0.8.4"
colored = "2.0.4"
dotenvy = "0.15.7"
once_cell = "1.18.0"
prost = "0.12.2"
prost-types = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
surrealdb = "1.0.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-reflection = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
